# finalyse_hedging_article

./: .gitignore  ANTI_PATTERNS_ASSUMPTIONS_ISSUES.md  COMPONENT_INTERACTION_DOCUMENTATION.md  FEATURE_STATUS_REPORT.md  PERFORMANCE_IMPROVEMENTS_REPORT.md  README.md  cash_flow_removal_constraints_report.md  convert_to_word.py  example.py  finalyse_hedging_article.docx  finalyse_hedging_article.md  pyproject.toml  revision_summary.md  session_handover_2025_08_04_hedging_article.md
docs/: troubleshooting.md
examples/: __init__.py  insurance_company.py  quick_start.py  template.py
src/: __init__.py  analyzer.py  models.py  optimizer.py
tests/: __init__.py  test_models.py  test_portfolio_comparison.py  test_sensitivity_analysis.py
